Table produksi_pot_siku {
  id bigint
  tanggal_produksi date
  kendala varchar [null]
  created_at timestamp
  updated_at timestamp
}

Table pegawai_pot_siku {
  id bigint
  id_produksi_pot_siku bigint [ref: > produksi_pot_siku.id]
  id_pegawai bigint
  masuk time
  pulang time
  tugas varchar
  ijin varchar [null]
  ket varchar [null]
  created_at timestamp
  updated_at timestamp
}

Table detail_barang_dikerjakan_pot_siku {
  id bigint
  id_produksi_pot_siku bigint [ref: > produksi_pot_siku.id]
  id_pegawai_pot_siku bigint [ref: > pegawai_pot_siku.id]
  id_ukuran bigint
  id_jenis_kayu bigint
  kw varchar
  tinggi int
  no_palet int
  jumlah int
  created_at timestamp
  updated_at timestamp
}

Table validasi_pot_siku {
  id bigint
  id_produksi_pot_siku bigint [ref: > produksi_pot_siku.id]
  role varchar
  status varchar
  created_at timestamp
  updated_at timestamp
}